--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,30 @@
-* {
-    font-size: 1.5rem;
+body {
+    background-color: lightgray;
+    text-align: center;
 }
 
 button {
     width: 100px;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+h3 {
+    font-size: 1.7rem;
+}
+
+h4 {
+    font-size: 1.5rem;
+}
+
+p {
+    font-size: 1.3rem;
+    margin: 0px;
+    padding: 15px;
+}
+
+a {
+    color: rgb(23, 93, 223);
 }
